--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shmrhcu_wrapper"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <include layout="@layout/layout_shimmer_home_user"/>
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
         <RelativeLayout
+            android:id="@+id/hcu_wrapper"
+            android:visibility="gone"
             android:background="@android:color/white"
             android:padding="16dp"
             android:minHeight="100dp"
@@ -132,6 +143,26 @@
                     android:layout_height="wrap_content"/>
 
             </RelativeLayout>
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/shmrhdr_list"
+                android:paddingHorizontal="8dp"
+                android:layout_marginVertical="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <include layout="@layout/layout_shimmer_home_doctor"/>
+                    <include layout="@layout/layout_shimmer_home_doctor"/>
+                    <include layout="@layout/layout_shimmer_home_doctor"/>
+
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/hdr_list"
