--- a/app/src/main/res/layout/fragment_plasma.xml
+++ b/app/src/main/res/layout/fragment_plasma.xml
@@ -7,8 +7,36 @@
     android:layout_height="match_parent"
     tools:context=".main.plasma.PlasmaFragment">
 
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shmrpd_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <include layout="@layout/layout_shimmer_plasma_donor"/>
+            <include layout="@layout/layout_shimmer_plasma_donor"/>
+            <include layout="@layout/layout_shimmer_plasma_donor"/>
+            <include layout="@layout/layout_shimmer_plasma_donor"/>
+            <include layout="@layout/layout_shimmer_plasma_donor"/>
+            <include layout="@layout/layout_shimmer_plasma_donor"/>
+            <include layout="@layout/layout_shimmer_plasma_donor"/>
+            <include layout="@layout/layout_shimmer_plasma_donor"/>
+            <include layout="@layout/layout_shimmer_plasma_donor"/>
+            <include layout="@layout/layout_shimmer_plasma_donor"/>
+            <include layout="@layout/layout_shimmer_plasma_donor"/>
+            <include layout="@layout/layout_shimmer_plasma_donor"/>
+
+        </LinearLayout>
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/plsmd_fab"
+        android:visibility="gone"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
