--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -12,7 +12,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shmrmcu_wrapper"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <include layout="@layout/layout_shimmer_menu_user"/>
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
         <RelativeLayout
+            android:id="@+id/mcu_wrapper"
+            android:visibility="gone"
             android:padding="16dp"
             android:minHeight="100dp"
             android:layout_marginBottom="16dp"
